# groundcite

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  GROUNDCITE_PROJECT_SPEC.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: CLAUDE.md  pyproject.toml
apps/api/app/: __init__.py  deps.py  errors.py  jobs.py  logging_conf.py  main.py  models.py  sse.py
apps/api/app/routes/: __init__.py  asks.py  asks_stream.py  conversations.py  documents.py  evals.py  health.py  jobs.py
apps/api/tests/: conftest.py  test_asks.py  test_asks_stream.py  test_conversations.py  test_documents.py  test_documents_write.py  test_errors.py  test_evals.py  test_evals_write.py  test_health.py  test_jobs.py
apps/api/tests/integration/: test_live_routes.py
apps/web/: CLAUDE.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(main)/: layout.tsx  page.tsx
apps/web/app/(main)/documents/[slug]/: page.tsx
apps/web/app/(main)/evals/: page.tsx
apps/web/app/ask/: page.tsx
apps/web/app/ask/[conversationId]/: page.tsx
apps/web/app/components/: AbstentionCard.tsx  CitationCard.tsx  ClauseTree.tsx  DocumentReaderClient.tsx  EvalCaseDrilldown.tsx  EvalRunsTable.tsx  EvalsChart.tsx  Nav.tsx  PipelineStatus.tsx  StatusChip.tsx  UploadForm.tsx
apps/web/app/components/chat/: ChatHeader.tsx  ChatShell.tsx  CitationsPanel.tsx  Composer.tsx  ExchangeCard.tsx  Sidebar.tsx
apps/web/app/documents/[slug]/: page.tsx
apps/web/app/evals/: page.tsx
apps/web/lib/: api.ts  chatExchange.ts  clauseMatch.ts  markdown.tsx  sse.ts
core/: CLAUDE.md  README.md  alembic.ini  pyproject.toml
core/groundcite/: __init__.py  cli.py  config.py  container.py
core/groundcite/adapters/: __init__.py
core/groundcite/adapters/chunker/: __init__.py  clause_chunker.py
core/groundcite/adapters/embedding/: __init__.py  bge_m3_embed.py  openai_embed.py
core/groundcite/adapters/evalsuite/: __init__.py  jsonl_suite.py
core/groundcite/adapters/lexical/: __init__.py  pg_lexical.py
core/groundcite/adapters/llm/: __init__.py  groq_llm.py  ollama_llm.py  openai_compatible.py  openai_llm.py
core/groundcite/adapters/parser/: __init__.py  pymupdf_parser.py
core/groundcite/adapters/repository/: __init__.py  pg_repo.py
core/groundcite/adapters/reranker/: __init__.py  bge_reranker.py  llm_reranker.py
core/groundcite/adapters/structure/: __init__.py  cfr_structure.py
core/groundcite/adapters/tokencount/: __init__.py  bge_m3_tokencount.py
core/groundcite/adapters/vector/: __init__.py  pg_vector.py
core/groundcite/domain/: __init__.py  entities.py  results.py
core/groundcite/ports/: __init__.py  protocols.py
core/groundcite/services/: __init__.py  answer_parse.py  ask.py  clause_detect.py  eval.py  fusion.py  ingestion.py  lang_detect.py  library.py  metrics.py
core/groundcite/services/prompts/: __init__.py  answerer.py
core/migrations/: env.py
core/migrations/versions/: 0001_initial_schema.py  0002_conversations.py
core/tests/: fakes.py  test_fake_repository_conversations.py  test_smoke.py
core/tests/adapters/: __init__.py  test_bge_reranker.py  test_cfr_structure.py  test_clause_chunker.py  test_embedding_fakes.py  test_llm_openai_compatible.py
core/tests/integration/: conftest.py  test_pg_reads.py  test_pg_retrieval.py
core/tests/ports/: __init__.py  test_document_parser_contract.py
core/tests/services/: __init__.py  test_answer_parse.py  test_ask_conversations.py  test_ask_generation.py  test_ask_retrieval.py  test_clause_detect.py  test_eval_full.py  test_eval_reads.py  test_eval_retrieval.py  test_fusion.py  test_ingestion.py  test_lang_detect.py  test_library.py  test_metrics.py  test_prompts_answerer.py
design_handoff_chat_redesign/: GroundCite Ask (current).dc.html  GroundCite Chat -dark-.dc.html  GroundCite Chat.dc.html  README.md
docs/: BLOG_DRAFT.md  ROADMAP.md  WEEK2_PLAN.md  WEEK3_INSTRUCTIONS.md  WEEK3_RESULTS.md  WEEK4_INSTRUCTIONS.md  WEEK4_RESULTS.md  WEEK5_INSTRUCTIONS.md  WEEK5_RESULTS.md  WEEK6_INSTRUCTIONS.md  WEEK6_RESULTS.md
docs/demo/: README.md  demo.webm
evals/: README.md  baseline.json
scripts/: check_baseline.py  fetch_corpus.py  seed_demo.py  verify_golden_set.py
