[project]
name = "groundcite"
version = "0.1.0"
description = "Grounded Q&A over aerospace & engineering standards with exact clause citations."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "GroundCite contributors" }]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "typer>=0.15,<1",
    "structlog>=24.4",
]

[project.scripts]
groundcite = "groundcite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["groundcite"]

[dependency-groups]
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "import-linter>=2.1,<3",
]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["groundcite", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# Docstrings/comments intentionally use §, em/en dashes (spec typography).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["groundcite"]

# ----------------------------------------------------------------------------
# mypy — strict on core (domain / ports / services), relaxed on adapter stubs
# whose third-party deps arrive later (spec §4.1, §17 rule 5).
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "groundcite.adapters.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ----------------------------------------------------------------------------
# import-linter — enforces the §4 dependency rule:
#   domain ← ports ← services / adapters ← apps.  Core never imports an adapter.
# ----------------------------------------------------------------------------
[tool.importlinter]
root_package = "groundcite"

[[tool.importlinter.contracts]]
name = "domain is pure (imports nothing internal)"
type = "forbidden"
source_modules = ["groundcite.domain"]
forbidden_modules = [
    "groundcite.ports",
    "groundcite.services",
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "ports import domain only"
type = "forbidden"
source_modules = ["groundcite.ports"]
forbidden_modules = [
    "groundcite.services",
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "services import domain + ports (never adapters/config/wiring)"
type = "forbidden"
source_modules = ["groundcite.services"]
forbidden_modules = [
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "adapters import domain + ports (NEVER services)"
type = "forbidden"
source_modules = ["groundcite.adapters"]
forbidden_modules = [
    "groundcite.services",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "layered core: domain < ports < services"
type = "layers"
layers = [
    "groundcite.services",
    "groundcite.ports",
    "groundcite.domain",
]
