[project]
name = "groundcite"
version = "0.1.0"
description = "Grounded Q&A over aerospace & engineering standards with exact clause citations."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "GroundCite contributors" }]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "typer>=0.15,<1",
    "structlog>=24.4",
]

# Optional Extras (spec §11.1 build-vs-buy; §6 step 1). CI installs NONE by
# default (`uv sync --frozen`), so adapters must import these lazily.
[project.optional-dependencies]
# `pip install groundcite[pdf]` — the lite/CI parser (spec §6 step 1).
pdf = ["pymupdf>=1.25,<2"]
# `pip install groundcite[embed]` — local bge-m3 embedding (spec §11 default).
# transformers provides just the tokenizer for bge_m3_tokencount (cheap); the
# FlagEmbedding model itself is the heavy dep. Both pinned (spec §17 rule 12).
embed = [
    "FlagEmbedding>=1.3,<2",
    "transformers>=4.45,<5",
]
# `pip install groundcite[rerank]` — the cross-encoder rerank stage (spec §7
# step 3). The Reranker port wraps AnswerDotAI's `rerankers` (spec §11 table);
# heavy (pulls torch), so it stays an extra and the adapter imports it lazily.
rerank = ["rerankers>=0.6,<1"]
# `pip install groundcite[llm]` — one OpenAI-compatible client (the `openai`
# SDK) serves ALL THREE generation providers: Groq (https://api.groq.com/openai/v1),
# OpenAI, and Ollama (http://localhost:11434/v1), per AD-1. Zero custom SSE/HTTP
# plumbing; spec §11.1 puts "model inference (generate)" under Buy. Imported
# lazily inside the adapter so CI (no extras) stays green. Pinned (§17 rule 12).
llm = ["openai>=1.50,<2"]
# `pip install groundcite[judge]` — Ragas for LLM-judge metrics ONLY (spec §11,
# §11.1 "judge-metric math"): faithfulness + context precision. Imported lazily
# inside the judge adapter, never in services. ⚠️ It pulls langchain-core
# transitively, acceptable ONLY because the spec names ragas; the import is
# quarantined in this extra. If it proves flaky the pre-approved fallback is a
# hand-rolled judge prompt (spec §11.1 keeps prompts as Build). Pinned (§12).
judge = ["ragas>=0.2,<1"]

[project.scripts]
groundcite = "groundcite.cli:app"

[tool.pytest.ini_options]
markers = [
    # CLAUDE rule 3: unit tests use fake ports (no network, no DB); integration
    # tests may use the compose Postgres. Integration tests SKIP themselves when
    # the DB is unreachable, so `uv run pytest` stays green in CI (no DB there).
    "integration: requires the compose Postgres; auto-skipped when unreachable",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["groundcite"]

[dependency-groups]
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "import-linter>=2.1,<3",
]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["groundcite", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# Docstrings/comments intentionally use §, em/en dashes (spec typography).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["groundcite"]

# Typer declares CLI options as argument defaults — that is its API, and the
# objects are immutable descriptors, not the mutable default B008 guards against.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

# ----------------------------------------------------------------------------
# mypy — strict on core (domain / ports / services), relaxed on adapter stubs
# whose third-party deps arrive later (spec §4.1, §17 rule 5).
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "groundcite.adapters.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Heavy optional-extra adapters (FlagEmbedding / transformers / PyMuPDF): these
# third-party packages ship no py.typed stubs. The ignore settings below are
# chosen so mypy passes in BOTH install states — CI (uv sync --frozen, no extras)
# AND local dev with the pdf/embed extras installed. The inline `# type: ignore`
# markers are kept per-line so the unused-ignore relaxation is explicit only
# where the partial-stub presence flips the code's type-check outcome.
[[tool.mypy.overrides]]
module = [
    "groundcite.adapters.embedding.bge_m3_embed",
    "groundcite.adapters.tokencount.bge_m3_tokencount",
    "groundcite.adapters.parser.pymupdf_parser",
    "groundcite.adapters.reranker.bge_reranker",
    "groundcite.adapters.llm.openai_compatible",
]
ignore_missing_imports = true
disallow_untyped_calls = false
warn_unused_ignores = false

# ----------------------------------------------------------------------------
# import-linter — enforces the §4 dependency rule:
#   domain ← ports ← services / adapters ← apps.  Core never imports an adapter.
# ----------------------------------------------------------------------------
[tool.importlinter]
root_package = "groundcite"

[[tool.importlinter.contracts]]
name = "domain is pure (imports nothing internal)"
type = "forbidden"
source_modules = ["groundcite.domain"]
forbidden_modules = [
    "groundcite.ports",
    "groundcite.services",
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "ports import domain only"
type = "forbidden"
source_modules = ["groundcite.ports"]
forbidden_modules = [
    "groundcite.services",
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "services import domain + ports (never adapters/config/wiring)"
type = "forbidden"
source_modules = ["groundcite.services"]
forbidden_modules = [
    "groundcite.adapters",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "adapters import domain + ports (NEVER services)"
type = "forbidden"
source_modules = ["groundcite.adapters"]
forbidden_modules = [
    "groundcite.services",
    "groundcite.container",
    "groundcite.config",
    "groundcite.cli",
]

[[tool.importlinter.contracts]]
name = "layered core: domain < ports < services"
type = "layers"
layers = [
    "groundcite.services",
    "groundcite.ports",
    "groundcite.domain",
]
