[project]
name = "groundcite-api"
version = "0.1.0"
description = "GroundCite FastAPI interface — thin routes over core services (spec §9)."
requires-python = ">=3.13"
dependencies = [
    "groundcite",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[tool.uv.sources]
# Core is a path dependency within the monorepo.
groundcite = { path = "../../core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
