[project]
name = "groundcite-api"
version = "0.1.0"
description = "GroundCite FastAPI interface — thin routes over core services (spec §9)."
requires-python = ">=3.13"
# Pinned exactly (spec §17 rule 12; WEEK4 §2 — versions verified at build time).
# SSE plumbing is Buy (sse-starlette, spec §11.1 / CLAUDE.md allow-list);
# structlog named in spec §12; python-multipart is FastAPI's multipart upload
# dependency (spec §9 POST /documents). All API-layer only — core stays logfree.
dependencies = [
    "groundcite",
    "fastapi==0.139.1",
    "uvicorn[standard]==0.51.0",
    "sse-starlette==2.4.0",
    "structlog==26.1.0",
    "python-multipart==0.0.20",
]

# Test-only: Starlette's TestClient requires httpx. NOT a runtime dep. ruff +
# mypy gate the api CI job (AD-8). pytest runs the AD-7 unit tests (stubs only).
[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "ruff==0.9.10",
    "mypy==1.14.1",
]

[tool.uv.sources]
# Core is a path dependency within the monorepo.
groundcite = { path = "../../core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------------------------------------------------------
# Ruff — API layer mirrors core's line length / target.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app", "groundcite"]

# FastAPI decorators hide function signatures from ruff's B008 heuristic.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Body", "fastapi.Query"]

# ----------------------------------------------------------------------------
# mypy — strict where practical (FastAPI/pydantic make full strict cheap here).
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# The `app` package is strict. Third-party stubs: FastAPI/pydantic ship typed;
# sse-starlette/structlog do too. We keep permissive settings for the test
# helpers that build stubs mirroring core's Services seam.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ----------------------------------------------------------------------------
# pytest — unit-first via dependency_overrides (AD-7); integration auto-skips.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
